@@ -6,3 +6,6 @@
 <p>6: <b>bold text</b></p>
 <p>7: <b>bold text</b></p>
 <p>8:</p>
+<p>9: this is the default</p>
+<p>10: this is the third</p>
+<p>11: this is fourth</p>
